--- a/src/components/LoadingSpinner/LoadingSpinner.module.scss
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.scss
@@ -4,6 +4,11 @@
     border-top-color: var(--accent-color);
     animation: spin 0.6s linear infinite;
   }
+
+  .size-xs {
+    width: 16px;
+    height: 16px;
+  }
   
   .size-s {
     width: 24px;
