Join request approved state

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --primary-color: #F0EFF4;
   --accent-color: #118A92;
   --secondary-color: #29393D;
-  --disabled-color: #93b3b6;
+  --disabled-color: #b2c2c7;
   --text-color: var(--secondary-color);
   --text-color-light: var(--primary-color);
   --text-secondary-color: #989899;
